--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc",
     "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "check": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
