--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -5,19 +5,19 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "vitest",
+    "test": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest watch"
+    "check": "tsc --noEmit"
   },
   "dependencies": {
     "@redux-ai/runtime": "workspace:*"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.17.19",
     "@vitest/coverage-v8": "^1.6.1",
     "express": "^4.21.2",
-    "typescript": "^5.0.0",
+    "typescript": "^5.7.3",
     "vitest": "^1.6.1"
   }
 }
