fix: update changesets config to use package name pattern for ignoring examples

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,7 +7,7 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@redux-ai/client", "examples/**/*"],
+  "ignore": ["@redux-ai/client", "@redux-ai/example-*"],
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
     "onlyUpdatePeerDependentsWhenOutOfRange": true,
     "updateRootPackage": true
