--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@redux-ai/state": "workspace:*",
     "@redux-ai/vector": "workspace:*",
     "@reduxjs/toolkit": "^2.5.1",
+    "ajv-ts": "^0.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0"
