--- a/examples/nextjs-langchain/package.json
+++ b/examples/nextjs-langchain/package.json
@@ -8,17 +8,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.40",
     "@redux-ai/langchain": "workspace:*",
     "@redux-ai/nextjs": "workspace:*",
-    "@langchain/core": "^0.3.40",
+    "@redux-ai/react": "workspace:*",
+    "@redux-ai/schema": "workspace:*",
+    "@hookform/resolvers": "^3.3.4",
+    "ajv-ts": "^0.4.0",
     "next": "^14.2.24",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
+    "@reduxjs/toolkit": "^2.5.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.17.19",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.5.3",
+    "autoprefixer": "^10.4.20"
   }
 }
