refactor: update types in applicant slice
- Add proper type parameters to createSlice
- Use SliceCaseReducers type for action creators
- Define state type explicitly

--- a/examples/nextjs-langchain/tsconfig.json
+++ b/examples/nextjs-langchain/tsconfig.json
@@ -15,7 +15,14 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@redux-ai/runtime": ["../../packages/runtime/src"],
+      "@redux-ai/schema": ["../../packages/schema/src"],
+      "@redux-ai/state": ["../../packages/state/src"],
+      "@redux-ai/vector": ["../../packages/vector/src"],
+      "@redux-ai/react": ["../../packages/react/src"],
+      "@redux-ai/nextjs": ["../../packages/nextjs/src"],
+      "@redux-ai/langchain": ["../../packages/langchain/src"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
