--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -28,6 +28,7 @@
     "prepublishOnly": "echo 'Publishing package'"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
     "ajv-ts": "^0.4.0"
   },
   "publishConfig": {
