--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@redux-ai/state": "workspace:*",
     "@redux-ai/vector": "workspace:*",
     "@reduxjs/toolkit": "^2.5.1",
-    "ajv-ts": "^0.4.0",
+    "@sinclair/typebox": "^0.34.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0"
