--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -28,8 +28,12 @@
     "prepublishOnly": "echo 'Publishing package'"
   },
   "dependencies": {
-    "ajv": "^8.12.0",
-    "ajv-ts": "^0.4.0"
+    "@sinclair/typebox": "^0.32.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.4",
+    "@vitest/coverage-v8": "^1.0.4"
   },
   "publishConfig": {
     "access": "public",
