chore: Align @sinclair/typebox versions to ^0.34.28 across workspace packages

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -28,12 +28,12 @@
     "prepublishOnly": "echo 'Publishing package'"
   },
   "dependencies": {
-    "@sinclair/typebox": "^0.32.0"
+    "@sinclair/typebox": "^0.34.28"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^1.0.4",
     "typescript": "^5.3.3",
-    "vitest": "^1.0.4",
-    "@vitest/coverage-v8": "^1.0.4"
+    "vitest": "^1.0.4"
   },
   "publishConfig": {
     "access": "public",
