fix: Add @sinclair/typebox as direct dependency to state package
This fixes the TypeScript error in GitHub Actions where the compiler couldn't find
@sinclair/typebox type definitions. The package was previously available through
hoisting but needed to be explicitly declared in the state package.

--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -31,6 +31,7 @@
     "@redux-ai/schema": "workspace:*",
     "@redux-ai/vector": "workspace:*",
     "@reduxjs/toolkit": "^2.5.1",
+    "@sinclair/typebox": "^0.34.28",
     "xstate": "^5.19.2"
   },
   "devDependencies": {
