--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,20 +29,21 @@
     "prepublishOnly": "echo 'Publishing package'"
   },
   "dependencies": {
-    "@redux-ai/schema": "workspace:*",
-    "@redux-ai/state": "workspace:*",
-    "@redux-ai/vector": "workspace:*",
-    "@reduxjs/toolkit": "^2.5.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@redux-ai/schema": "workspace:*",
+    "@redux-ai/state": "workspace:*",
+    "@redux-ai/vector": "workspace:*",
+    "@reduxjs/toolkit": "^2.5.1",
+    "@sinclair/typebox": "^0.34.28",
+    "@tanstack/react-query": "^5.66.7",
+    "@tanstack/react-query-devtools": "^5.66.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
-    "react-hook-form": "^7.53.1",
-    "@tanstack/react-query": "^5.66.7",
-    "@tanstack/react-query-devtools": "^5.66.7"
+    "react-hook-form": "^7.53.1"
   },
   "peerDependencies": {
     "react": "^18.0.0",
