fix: adapter implementations and runtime behavior
- Fix Express and Next.js adapter implementations to return handler functions directly
- Update adapter return types to match test expectations
- Modify server routes to work with updated adapters
- Fix type definitions for runtime behavior

This change resolves the internal server errors and aligns the implementation
with the test expectations, making the API requests work properly.

--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -9,6 +9,9 @@
     "test:coverage": "vitest run --coverage",
     "check": "tsc --noEmit"
   },
+  "dependencies": {
+    "@redux-ai/schema": "workspace:*"
+  },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@vitest/coverage-v8": "^1.6.1",
