--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@sinclair/typebox": "^0.34.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "zod-to-json-schema": "^3.24.3"
   }
 }
