--- a/examples/nextjs-langchain/package.json
+++ b/examples/nextjs-langchain/package.json
@@ -24,7 +24,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "zod-to-json-schema": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "^20.17.19",
