chore: revert vitest config changes and maintain original setup

--- a/packages/vector/package.json
+++ b/packages/vector/package.json
@@ -33,5 +33,10 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "devDependencies": {
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "vitest": "^3.0.8"
   }
 }
