refactor: simplify error handling and remove hardcoded errors across providers and adapters

--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -10,7 +10,8 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@redux-ai/schema": "workspace:*"
+    "@redux-ai/schema": "workspace:*",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
