--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -39,7 +39,6 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.66.7",
     "@tanstack/react-query-devtools": "^5.66.7",
-    "@xstate/react": "^5.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
@@ -57,6 +56,8 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "@xstate/react": "^5.0.3",
+    "@xstate/test": "^0.5.1",
     "typescript": "^5.7.3",
     "vite": "^5.4.14",
     "vitest": "^3.0.6"
