fix: resolve typescript errors in vitest configs and vite type definitions

--- a/packages/express/tsconfig.json
+++ b/packages/express/tsconfig.json
@@ -12,6 +12,8 @@
     "noEmit": false,
     "emitDeclarationOnly": false,
     "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "bundler",
     "paths": {
       "@redux-ai/runtime": ["../runtime/src"]
     }
