--- a/packages/langchain/tsconfig.json
+++ b/packages/langchain/tsconfig.json
@@ -14,7 +14,10 @@
     "baseUrl": ".",
     "paths": {
       "langchain/*": ["./src/types/*"]
-    }
+    },
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "bundler"
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"],
