--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -13,6 +13,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "../..",
     "paths": {
       "@redux-ai/schema": ["packages/schema/src"],
