--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,17 @@
     "server/storage.ts",
     "server/db.ts",
     "server/config.ts",
-    "packages/**/*",
     "server/vite.ts",
-    "vite.config.ts"
+    "vite.config.ts",
+    "packages/**/*"
   ],
-  "exclude": ["node_modules", "build", "dist", "**/*.test.ts"],
+  "exclude": [
+    "node_modules",
+    "build",
+    "dist",
+    "**/dist/**/*",
+    "**/*.test.ts"
+  ],
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
