Optimize pre-commit hooks for better performance

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,8 +1,7 @@
 {
   "*.{js,jsx,ts,tsx}": [
     "prettier --write",
-    "eslint --fix",
-    "vitest related --run"
+    "eslint --fix"
   ],
   "*.{json,md}": ["prettier --write"],
   "*.{css,scss}": ["prettier --write", "stylelint --fix"],
